--- a/2_environ_NMDS.Rmd
+++ b/2_environ_NMDS.Rmd
@@ -184,7 +184,9 @@ table_plant
 df <- extracted %>%  
   column_to_rownames("site_rep") %>% 
   dplyr::select(c("slope", "southwestness", "twi", "fire_event_count",  
-                  "summer_solarradiation", "winter_solarradiation", "equinox_solarradiation"))
+                  #"summer_solarradiation", "winter_solarradiation", "equinox_solarradiation"
+                  "total_solrad"
+                  ))
 
 
 # using data set *** df *** from two chuncks above
@@ -206,9 +208,6 @@ ac <- function(x) {
 
 # Best method?
 map_dbl(m, ac)
-
-# Best method is g average at 0.9650463 
-
 
 
 #########################
@@ -524,7 +523,10 @@ p
 ########### Environ PCA - unscaled data
 
 pca_data <- extracted %>% 
-  dplyr::select(c(slope, twi, southwestness, fire_event_count, site_rep, summer_solarradiation, winter_solarradiation, equinox_solarradiation)) %>% 
+  dplyr::select(c(slope, twi, southwestness, fire_event_count, site_rep, 
+                  #summer_solarradiation, winter_solarradiation, equinox_solarradiation
+                  total_solrad
+                  )) %>% 
   column_to_rownames("site_rep")
 
 ########### Environ PCA - scaled data - PCA results are the same with unscaled and scaled data, so I'll stick with the unscaled data (sept. 19, 2024 - SML)
@@ -554,11 +556,18 @@ pca_scores <- pca_result$x  # These are the scores (transformed data)
 
 # View PCA results
 summary(pca_result)
-# Importance of components:
+# Importance of components: SUMMER, WINTER, EQUINOX
 #                           PC1    PC2    PC3    PC4     PC5     PC6     PC7
 # Standard deviation     1.5361 1.3759 1.0256 0.8627 0.70418 0.67483 0.00746
 # Proportion of Variance 0.3371 0.2705 0.1502 0.1063 0.07084 0.06506 0.00001
 # Cumulative Proportion  0.3371 0.6075 0.7578 0.8641 0.93494 0.99999 1.00000
+
+# Importance of components: TOTAL SOLAR RADIATION
+#                           PC1    PC2    PC3    PC4     PC5
+# Standard deviation     1.4238 1.0116 0.9723 0.7316 0.68461
+# Proportion of Variance 0.4054 0.2047 0.1891 0.1071 0.09374
+# Cumulative Proportion  0.4054 0.6101 0.7992 0.9063 1.00000
+
 summary(pca_scores)
 
 pca_values <- as.data.frame(pca_result$x)
@@ -596,8 +605,8 @@ PCA_plot <- ggplot() +
                   aes(x = PC1, y = PC2, label = rownames(loadings_df)),
                   size = 4, color = "blue") +             # Text labels in blue
   labs(title = "PCA of Environmental Variables", 
-       x = "Principal Component 1 (33.71%)",
-       y = "Principal Component 2 (27.05%)") +                  
+       x = "Principal Component 1 (40.54%)",
+       y = "Principal Component 2 (20.47%)") +                  
   #clean_background +      
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5)) +         # Center title
@@ -621,8 +630,8 @@ PCA_environcluster <- ggplot() +
                   aes(x = PC1, y = PC2, label = rownames(loadings_df)),
                   size = 4, color = "blue") +             # Text labels in blue
  labs(title = "PCA of Environmental Variables", 
-       x = "Principal Component 1 (33.71%)",
-       y = "Principal Component 2 (27.05%)") +                  
+       x = "Principal Component 1 (40.54%)",
+       y = "Principal Component 2 (20.47%)") +                  
   #clean_background +      
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5)) +         # Center title
@@ -633,14 +642,16 @@ PCA_environcluster <- ggplot() +
 PCA_plantcluster <- ggplot() +
   geom_point (data = pca_df,
               aes(x = PC1, y = PC2, 
-                  color = plant_cluster, shape = plant_cluster, fill = plant_cluster), 
+                  color = factor(plant_cluster, levels = c(1, 3, 2, 4, 5)), 
+                 shape = factor(plant_cluster, levels = c(1, 3, 2, 4, 5)), 
+                 fill = factor(plant_cluster, levels = c(1, 3, 2, 4, 5))), 
               size = 4) +  
   # how the data points look
   scale_shape_manual(values = c("1" = 21, "2" = 21, "3" = 21, "4" = 21, "5" = 7),
                      labels = c("1" = "NNG", "2" = "ssF", "3" = "ssG", "4" = "ssFG", "5" = "EVG")) +
   scale_color_manual(values = c("1" = "black", "2" = "black", "3" = "black", "4" = "black", "5" = "black"),
                      labels = c("1" = "NNG", "2" = "ssF", "3" = "ssG", "4" = "ssFG", "5" = "EVG")) +
-  scale_fill_manual(values = c("1" = "black", "2" = "grey75", "3" = "grey40", "4" = "white", "5" = "black"),
+  scale_fill_manual(values = c("1" = "black", "2" = "grey85", "3" = "grey60", "4" = "white", "5" = "black"),
                      labels = c("1" = "NNG", "2" = "ssF", "3" = "ssG", "4" = "ssFG", "5" = "EVG")) +
   
   geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
@@ -653,8 +664,8 @@ PCA_plantcluster <- ggplot() +
                   aes(x = PC1, y = PC2, label = rownames(loadings_df)),
                   size = 4, color = "blue") +             # Text labels in blue
  labs(title = "PCA of Environmental Variables", 
-       x = "Principal Component 1 (33.71%)",
-       y = "Principal Component 2 (27.05%)") +                   
+       x = "Principal Component 1 (40.54%)",
+       y = "Principal Component 2 (20.47%)") +                   
   #clean_background +      
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5)) +         # Center title
